update date range style

--- a/src/Components/DashboardComponents/KotOrderHistory/orderHistory.css
+++ b/src/Components/DashboardComponents/KotOrderHistory/orderHistory.css
@@ -337,9 +337,8 @@
 .dateRange-picker .popupinnerbox {
   position: static;
   transform: none;
-  /* height: 90%; */
-  /* max-height: 790px; */
   height: auto;
+  max-width: 650px;
 }
 
 .dateRange-picker .popuptitle h2 {
